--- a/Designer/Interface/Main.xaml
+++ b/Designer/Interface/Main.xaml
@@ -5,16 +5,59 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         xmlns:c1="http://schemas.componentone.com/winfx/2006/xaml"
 		xmlns:c1datetime="clr-namespace:C1.WPF.DateTimeEditors;assembly=C1.WPF.DateTimeEditors.4"
-		xmlns:chrome="clr-namespace:Prospective.Controls.Chrome;assembly=Prospective.Controls"
+		xmlns:pc="http://schemas.propsectivesoftware.com/pc"
+		xmlns:local="clr-namespace:WCFArchitect.Interface"
         mc:Ignorable="d" d:DesignHeight="900" d:DesignWidth="1200"
 		DataContext="{Binding RelativeSource={RelativeSource Self}}"
 		Style="{StaticResource MainWindowStyle}"
 	    Title="WCF Architect" MinHeight="900" MinWidth="1200"
-		TextOptions.TextFormattingMode="Display" TextOptions.TextHintingMode="Fixed" TextOptions.TextRenderingMode="ClearType" RenderOptions.BitmapScalingMode="HighQuality" RenderOptions.ClearTypeHint="Enabled" 
+		TextOptions.TextFormattingMode="Display" TextOptions.TextHintingMode="Fixed" TextOptions.TextRenderingMode="ClearType" RenderOptions.BitmapScalingMode="HighQuality" RenderOptions.ClearTypeHint="Enabled"
 		SourceInitialized="Main_SourceInitialized" StateChanged="Main_StateChanged" Closing="Main_Closing" KeyUp="Main_KeyUp">
-	<chrome:WindowChrome.WindowChrome>
-		<chrome:WindowChrome CaptionHeight="34" ResizeBorderThickness="4" CornerRadius="0" GlassFrameThickness="0" />
-	</chrome:WindowChrome.WindowChrome>
+	<pc:WindowChrome.WindowChrome>
+		<pc:WindowChrome CaptionHeight="34" ResizeBorderThickness="4" CornerRadius="0" GlassFrameThickness="0" />
+	</pc:WindowChrome.WindowChrome>
+	<Window.Resources>
+		<pc:UriToBitmapImageConverter x:Key="UriToBitmapImageConverter" />
+		<Style x:Key="{x:Type local:RecentProjectItem}" TargetType="{x:Type local:RecentProjectItem}">
+			<Setter Property="Background" Value="{StaticResource DefaultBackgroundColor}" />
+			<Setter Property="BorderBrush" Value="Transparent" />
+			<Setter Property="Foreground" Value="{StaticResource DefaultFontColor}" />
+			<Setter Property="FontFamily" Value="{StaticResource DefaultFontFamily}" />
+			<Setter Property="FontSize" Value="{DynamicResource DefaultFontSize}" />
+			<Setter Property="FontWeight" Value="{StaticResource DefaultFontWeight}" />
+			<Setter Property="UseLayoutRounding" Value="true"/>
+			<Setter Property="MinHeight" Value="65"/>
+			<Setter Property="MaxHeight" Value="65"/>
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate TargetType="{x:Type local:RecentProjectItem}">
+						<Grid Margin="0,0,0,10">
+							<Grid.ColumnDefinitions>
+								<ColumnDefinition Width="*" />
+								<ColumnDefinition Width="45" />
+							</Grid.ColumnDefinitions>
+							<Button Name="OpenProject" Grid.Column="0" Command="{x:Static local:RecentProjectItem.OpenCommand}" CommandParameter="{Binding RelativeSource={RelativeSource TemplatedParent}}" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center" >
+								<Button.ContextMenu>
+									<ContextMenu>
+										<MenuItem Header="Open Solution" Command="{x:Static local:RecentProjectItem.OpenCommand}" CommandParameter="{Binding RelativeSource={RelativeSource TemplatedParent}}" CommandTarget="{Binding Path=PlacementTarget,RelativeSource={RelativeSource AncestorType={x:Type ContextMenu}}}" />
+										<MenuItem Header="Open Containing Folder" Command="{x:Static local:RecentProjectItem.FolderCommand}" CommandParameter="{Binding RelativeSource={RelativeSource TemplatedParent}}" CommandTarget="{Binding Path=PlacementTarget,RelativeSource={RelativeSource AncestorType={x:Type ContextMenu}}}" />
+										<MenuItem Header="Remove From List" Command="{x:Static local:RecentProjectItem.RemoveCommand}" CommandParameter="{Binding RelativeSource={RelativeSource TemplatedParent}}" CommandTarget="{Binding Path=PlacementTarget,RelativeSource={RelativeSource AncestorType={x:Type ContextMenu}}}" />
+									</ContextMenu>
+								</Button.ContextMenu>
+								<StackPanel Margin="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+									<TextBlock Text="{TemplateBinding ItemTitle}" Height="Auto" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" HorizontalAlignment="Left"/>
+									<TextBlock Text="{TemplateBinding ItemPath}" Height="Auto" Foreground="Gray" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" HorizontalAlignment="Left"/>
+								</StackPanel>
+							</Button>
+							<Button Grid.Column="1" Command="{x:Static local:RecentProjectItem.FlagCommand}" CommandParameter="{Binding RelativeSource={RelativeSource TemplatedParent}}" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" >
+								<Image Source="{Binding Path=ItemFlag, Converter={StaticResource UriToBitmapImageConverter}, RelativeSource={RelativeSource TemplatedParent}}" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="32" Width="32" Stretch="Uniform"/>
+							</Button>
+						</Grid>					
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>					
+		</Style>
+	</Window.Resources>
 	<Border x:Name="WindowBorder" BorderThickness="0" BorderBrush="{StaticResource WindowBorderColor}" Background="{StaticResource WindowBackground}" Margin="8">
 		<Grid>
 			<Grid.RowDefinitions>
@@ -31,7 +74,7 @@
 					<ColumnDefinition Width="36" />
 					<ColumnDefinition Width="36" />
 				</Grid.ColumnDefinitions>
-				<Button x:Name="SystemMenu" Grid.Column="0" Style="{StaticResource WindowSystemButtonStyle}" chrome:WindowChrome.IsHitTestVisibleInChrome="True" Click="SystemMenu_Click" >
+				<Button x:Name="SystemMenu" Grid.Column="0" Style="{StaticResource WindowSystemButtonStyle}" pc:WindowChrome.IsHitTestVisibleInChrome="True" Click="SystemMenu_Click" >
 					<Button.ContextMenu>
 						<ContextMenu>
 							<MenuItem Header="Home" x:Name="SystemMenuHome" Click="SystemMenuHome_Click" />
@@ -52,7 +95,7 @@
 					</Button.ContextMenu>
 					<Image Source="pack://application:,,,/WCFArchitect;component/Icons/X32/LogoIcon.png" Width="32" Height="32" Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="1" />
 				</Button>
-				<ItemsControl x:Name="ScreenButtons" Grid.Column="1" Margin="20,0" chrome:WindowChrome.IsHitTestVisibleInChrome="True" >
+				<ItemsControl x:Name="ScreenButtons" Grid.Column="1" Margin="20,0" pc:WindowChrome.IsHitTestVisibleInChrome="True" >
 					<ItemsControl.ItemsPanel>
 						<ItemsPanelTemplate>
 							<StackPanel Orientation="Horizontal" />
@@ -61,16 +104,16 @@
 				</ItemsControl>
 				<Label Grid.Column="2" Content="{Binding Path=Title}" FontSize="14pt" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" />
 				<Label Grid.Column="3" Content="{Binding Path=CurrentUser.Name, TargetNullValue=''}" ContentStringFormat="Current User: {0}" Margin="5,0" FontSize="10pt" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" />
-				<Button x:Name="MinimizeWindow" Grid.Column="4" Style="{StaticResource WindowControlButtonStyle}" chrome:WindowChrome.IsHitTestVisibleInChrome="True" Click="MinimizeWindow_Click">
+				<Button x:Name="MinimizeWindow" Grid.Column="4" Style="{StaticResource WindowControlButtonStyle}" pc:WindowChrome.IsHitTestVisibleInChrome="True" Click="MinimizeWindow_Click">
 					<Image Source="pack://application:,,,/Prospective.Controls;component/Resources/WindowMinimize.png" Width="12" Height="12" Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center" />
 				</Button>
-				<Button x:Name="MaximizeWindow" Grid.Column="5" Visibility="Collapsed" Style="{StaticResource WindowControlButtonStyle}" chrome:WindowChrome.IsHitTestVisibleInChrome="True" Click="MaximizeWindow_Click">
+				<Button x:Name="MaximizeWindow" Grid.Column="5" Visibility="Collapsed" Style="{StaticResource WindowControlButtonStyle}" pc:WindowChrome.IsHitTestVisibleInChrome="True" Click="MaximizeWindow_Click">
 					<Image Source="pack://application:,,,/Prospective.Controls;component/Resources/WindowMaximize.png" Width="12" Height="12" Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center" />
 				</Button>
-				<Button x:Name="RestoreWindow" Grid.Column="5" Style="{StaticResource WindowControlButtonStyle}" chrome:WindowChrome.IsHitTestVisibleInChrome="True" Click="RestoreWindow_Click">
+				<Button x:Name="RestoreWindow" Grid.Column="5" Style="{StaticResource WindowControlButtonStyle}" pc:WindowChrome.IsHitTestVisibleInChrome="True" Click="RestoreWindow_Click">
 					<Image Source="pack://application:,,,/Prospective.Controls;component/Resources/WindowRestore.png" Width="12" Height="12" Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center" />
 				</Button>
-				<Button x:Name="CloseWindow" Grid.Column="6" Style="{StaticResource WindowControlButtonStyle}" chrome:WindowChrome.IsHitTestVisibleInChrome="True" Click="CloseWindow_Click">
+				<Button x:Name="CloseWindow" Grid.Column="6" Style="{StaticResource WindowControlButtonStyle}" pc:WindowChrome.IsHitTestVisibleInChrome="True" Click="CloseWindow_Click">
 					<Image Source="pack://application:,,,/Prospective.Controls;component/Resources/WindowClose.png" Width="12" Height="12" Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center" />
 				</Button>
 			</Grid>
@@ -113,7 +156,7 @@
 						</StackPanel>
 						<StackPanel Grid.Column="1" Grid.Row="1" Margin="5">
 							<TextBlock Text="New" Foreground="{StaticResource DefaultFontColor}" FontSize="18pt" Margin="0,0,0,10" />
-							<Button x:Name="NewSolution" Grid.Row="0" HorizontalContentAlignment="Left" Click="NewSolution_Click" >
+							<Button x:Name="CreateSolution" Grid.Row="0" HorizontalContentAlignment="Left" Click="NewSolution_Click" >
 								<Grid>
 									<Grid.ColumnDefinitions>
 										<ColumnDefinition Width="Auto" />
@@ -126,7 +169,7 @@
 									</StackPanel>
 								</Grid>
 							</Button>
-							<Button x:Name="AddProject" Grid.Row="0" Margin="0,10,0,0" HorizontalContentAlignment="Left" Click="NewProject_Click" >
+							<Button x:Name="AddNETProject" Grid.Row="0" Margin="0,10,0,0" IsEnabled="False" HorizontalContentAlignment="Left" Click="AddNETProject_Click" >
 								<Grid>
 									<Grid.ColumnDefinitions>
 										<ColumnDefinition Width="Auto" />
@@ -134,8 +177,34 @@
 									</Grid.ColumnDefinitions>
 									<Image Source="pack://application:,,,/WCFArchitect;component/Icons/X64/Project.png" Margin="10,5" HorizontalAlignment="Left" VerticalAlignment="Top" UseLayoutRounding="True" Height="64" Width="64" Stretch="None" Grid.Column="0" />
 									<StackPanel Grid.Column="1" Margin="10">
-										<Label Content="Add Project" Foreground="Gray" FontSize="14pt" FontWeight="Bold" Padding="0"/>
-										<Label Content="Add a WCF Architect Project to the open Solution." Padding="0" />
+										<Label Content="Add .NET Framework Project" Foreground="Gray" FontSize="14pt" FontWeight="Bold" Padding="0"/>
+										<TextBlock Text="Add a project supporting the .NET Framework to the solution." Padding="0" TextWrapping="Wrap" />
+									</StackPanel>
+								</Grid>
+							</Button>
+							<Button x:Name="AddSLProject" Grid.Row="0" Margin="0,10,0,0" IsEnabled="False" HorizontalContentAlignment="Left" Click="AddSLProject_Click" >
+								<Grid>
+									<Grid.ColumnDefinitions>
+										<ColumnDefinition Width="Auto" />
+										<ColumnDefinition Width="*" />
+									</Grid.ColumnDefinitions>
+									<Image Source="pack://application:,,,/WCFArchitect;component/Icons/X64/Project.png" Margin="10,5" HorizontalAlignment="Left" VerticalAlignment="Top" UseLayoutRounding="True" Height="64" Width="64" Stretch="None" Grid.Column="0" />
+									<StackPanel Grid.Column="1" Margin="10">
+										<Label Content="Add Silverlight Project" Foreground="Gray" FontSize="14pt" FontWeight="Bold" Padding="0"/>
+										<Label Content="Add a project supporting Silverlight 4.0 and 5.0 to the solution." Padding="0" />
+									</StackPanel>
+								</Grid>
+							</Button>
+							<Button x:Name="AddRTProject" Grid.Row="0" Margin="0,10,0,0" IsEnabled="False" HorizontalContentAlignment="Left" Click="AddRTProject_Click" >
+								<Grid>
+									<Grid.ColumnDefinitions>
+										<ColumnDefinition Width="Auto" />
+										<ColumnDefinition Width="*" />
+									</Grid.ColumnDefinitions>
+									<Image Source="pack://application:,,,/WCFArchitect;component/Icons/X64/Project.png" Margin="10,5" HorizontalAlignment="Left" VerticalAlignment="Top" UseLayoutRounding="True" Height="64" Width="64" Stretch="None" Grid.Column="0" />
+									<StackPanel Grid.Column="1" Margin="10">
+										<Label Content="Add Windows Runtime Project" Foreground="Gray" FontSize="14pt" FontWeight="Bold" Padding="0"/>
+										<Label Content="Add a project supporting the Windows Runtime to the solution." Padding="0" />
 									</StackPanel>
 								</Grid>
 							</Button>
