--- a/Designer/Interface/Main.xaml
+++ b/Designer/Interface/Main.xaml
@@ -28,6 +28,7 @@
 			<Setter Property="UseLayoutRounding" Value="true"/>
 			<Setter Property="MinHeight" Value="65"/>
 			<Setter Property="MaxHeight" Value="65"/>
+			<Setter Property="Padding" Value="0" />
 			<Setter Property="Template">
 				<Setter.Value>
 					<ControlTemplate TargetType="{x:Type local:RecentProjectItem}">
